--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
+# Project files
+*.user
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+# Binary files
+bin
